Fix: Remove scrollbar

--- a/src/chat-interface.scss
+++ b/src/chat-interface.scss
@@ -1,4 +1,8 @@
 .chat-interface-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  
   width: 100%;
   height: 100vh;
   
@@ -19,6 +23,8 @@
   padding: 40px 20px;
   display: flex;
   flex-direction: column;
+  
+  box-sizing: border-box;
 
   .app-header {
     margin-top: 60px;
@@ -41,6 +47,9 @@
 
   .interaction-section {
     flex: 1; 
+    
+    min-height: 0; 
+    
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
